--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,10 +91,10 @@ dependencies {
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
-    implementation"org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0"
+    implementation"org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.1"
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0'
 
     //Paging
@@ -106,4 +106,8 @@ dependencies {
     // Data Store
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
+    // Room
+    implementation "androidx.room:room-runtime:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
+    implementation "androidx.room:room-ktx:2.3.0"
 }
