--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,23 +81,26 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
-    //Coroutines
+    // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 
-    //Hilt
+    // Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0-beta01"
 
+    // Timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
+    // Kotlinx.serialization
     implementation"org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.1"
-    //Retrofit
+
+    // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0'
 
-    //Paging
+    // Paging
     implementation("androidx.paging:paging-runtime:$paging_version")
     testImplementation("androidx.paging:paging-common:$paging_version")
     implementation("androidx.paging:paging-guava:$paging_version")
@@ -110,4 +113,10 @@ dependencies {
     implementation "androidx.room:room-runtime:2.3.0"
     kapt "androidx.room:room-compiler:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
+
+    // Accompanist
+    implementation "com.google.accompanist:accompanist-pager:0.20.3"
+
+    // Exoplayer
+    implementation 'com.google.android.exoplayer:exoplayer:2.16.1'
 }
